[package]
name = "udp_relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3.25"
num_cpus = "1.13.1"
tokio = { version = "1.21.2", features = ["full"] }
